force-app/main/default/objects/ReceiptJournal__c/fields/Disaster__c.field-meta.xml
<CustomField>
    <fullName>Disaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>災害名</label>
    <referenceTo>Disaster__c</referenceTo>
    <relationshipLabel>収受簿</relationshipLabel>
    <relationshipName>ReceiptJournals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>