force-app/main/default/objects/ReceiptJournal__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <label>氏名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>