force-app/main/default/objects/ReceiptJournal__c/fields/ReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>ReceiptDate__c</fullName>
    <label>収受日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>