force-app/main/default/objects/ReceiptJournal__c/fields/RequestCategory__c.field-meta.xml
<CustomField>
    <fullName>RequestCategory__c</fullName>
    <label>申請区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RequestCategoryPickList</valueSetName>
    </valueSet>
</CustomField>