force-app/main/default/objects/ReceiptJournal__c/fields/StateProgress__c.field-meta.xml
<CustomField>
    <fullName>StateProgress__c</fullName>
    <label>進捗状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>収受</fullName>
                <default>true</default>
                <label>収受</label>
            </value>
            <value>
                <fullName>審査NG</fullName>
            </value>
            <value>
                <fullName>審査OK</fullName>
            </value>
            <value>
                <fullName>支給済</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>